# writingbuddy

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  config.toml  default_config.toml
.github/workflows/: rust.yml
resources/: de.fluent  en-US.fluent
src/: main.rs
