[package]
name = "writingbuddy"
version = "0.15.1"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "A tool to help you create a writing habit"
readme = "README.md"
homepage = "https://github.com/niederb/writingbuddy"
repository = "https://github.com/niederb/writingbuddy"
keywords = ["cli", "tool", "writing", "text"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
config = "0.13"
tui = "0.19"
crossterm = "0.26"
textwrap = "0.16"
structopt = "0.3"
stopwatch = "0.0"
dirs = "5.0.0"
unic-langid = "0.9.1"
fluent = "0.16.0"
